[package]
name = "parabellum"
version = "0.1.0"
description = "API server for Parabellum, a reimplementation of the famous MMORPG browser game Travian v3.x"
repository = "https://github.com/andreapavoni/parabellum"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
license = "MIT"
keywords = ["travian", "MMORPG", "game", "browsergame"]
readme = "README.md"
publish = false
rust-version = "1.86"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# JSON handling
serde_json = { version = "1.0", features = ["raw_value"] }
serde = { version = "1.0", features = ["derive"] }
# Date and time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }

# Database
diesel = { version = "2.3", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }

# Uuid
uuid = { version = "1.1", features = ["serde", "v4"] }

# Result and Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generator
rand = "0.8.5"

# Utils
dotenvy = "0.15"
