[workspace]
members = [
    "parabellum_core",
    "parabellum_game",
    "parabellum_app",
    "parabellum_db",
    "parabellum_server",
    "parabellum_types",
    "parabellum_web"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
rand = "0.8.5"
dotenvy = "0.15"
password-hash = { version = "0.5", features = ["std"] }
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8", features = ["http2", "multipart", "macros"] }
axum-extra = { version = "0.12", features = ["cached", "cookie", "cookie-signed", "handler", "middleware", "multipart", "query", "routing", "with-rejection"] }
