[workspace]
members = [
    "parabellum_game",
    "parabellum_app",
    "parabellum_db",
    "parabellum_server",
    "parabellum_types",
    "parabellum_web"
]
resolver = "3"

[profile.release]
# Maximum Link Time Optimization for best performance
lto = "fat"
# Single codegen unit maximizes optimization opportunities
codegen-units = 1
# Keep debug symbols for profiling capabilities
strip = "none"
# Use unwinding for better error handling without sacrificing much performance
panic = "unwind"
# Disable incremental compilation for maximum optimization
incremental = false
# Maximum optimization for speed
opt-level = 3
# Include minimal debug info for better profiling without much size impact
debug = 1
# Enable more aggressive optimizations
overflow-checks = false

# Optimize dependencies with the same settings
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = "symbols"
debug = false
# LTO cannot be specified in package profile

[workspace.metadata.release]
allow-branch = ["*"]
consolidate-commits = true

[workspace.package]
description = "A Travian 3.x clone."
version = "0.4.0"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/andreapavoni/parabellum"
keywords = ["travian", "rust", "mmorpg", "game", "strategy", "browser-game"]
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
rand = "0.8.5"
dotenvy = "0.15"
password-hash = { version = "0.5", features = ["std"] }
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8", features = ["http2", "multipart", "macros"] }
axum-extra = { version = "0.12", features = ["cached", "cookie", "cookie-signed", "handler", "middleware", "multipart", "query", "routing", "with-rejection"] }
