[package]
name = "parabellum_core"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
parabellum_types = { path = "../parabellum_types" }

anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
