[package]
name = "parabellum_db"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
parabellum_app = { path = "../parabellum_app" }
parabellum_game = { path = "../parabellum_game" }
parabellum_core = { path = "../parabellum_core" }
parabellum_types = { path = "../parabellum_types" }

sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
