[package]
name = "parabellum_db"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
parabellum_app = { path = "../parabellum_app" }
parabellum_game = { path = "../parabellum_game" }
parabellum_types = { path = "../parabellum_types" }

sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
