[package]
name = "parabellum_server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[[bin]]
name = "parabellum"
path = "main.rs"

[dependencies]
parabellum_types = { path = "../parabellum_types" }
parabellum_game = { path = "../parabellum_game" }
parabellum_db = { path = "../parabellum_db" }
parabellum_app = { path = "../parabellum_app" }
parabellum_web = { path = "../parabellum_web" }

tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }


std_prelude = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["cookies"] }
