[package]
name = "parabellum_server"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[[bin]]
name = "parabellum"
path = "bin/parabellum.rs"

[[bin]]
name = "parabellum-replay"
path = "bin/parabellum_replay.rs"

[[bin]]
name = "parabellum-seed"
path = "bin/parabellum_seed.rs"

[[bin]]
name = "parabellum-backfill-heroes"
path = "bin/parabellum_backfill_heroes.rs"

[dependencies]
parabellum_types = { path = "../parabellum_types" }
parabellum_game = { path = "../parabellum_game" }
parabellum_infra = { path = "../parabellum_infra" }
parabellum_app = { path = "../parabellum_app" }
parabellum_web = { path = "../parabellum_web" }

tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }


std_prelude = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
time = "0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
reqwest = { version = "0.13" }
parabellum_app = { path = "../parabellum_app", features = ["test-utils"] }
parabellum_game = { path = "../parabellum_game", features = ["test-utils"] }
