[package]
name = "parabellum_types"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]

# for errors
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
