[package]
name = "parabellum_types"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]

# for errors
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
