[package]
name = "parabellum_web"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
parabellum_app = { path = "../parabellum_app" }
parabellum_game = { path = "../parabellum_game" }
parabellum_types = { path = "../parabellum_types" }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
# HTTP stuff
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Templates
askama = { version = "0.14", features = ["blocks", "full", "serde_json"] }

[dev-dependencies]
# Enable "test-utils" for parabellum_app
parabellum_app = { path = "../parabellum_app", features = ["test-utils"] }
