[package]
name = "parabellum_web"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[lib]
path = "lib.rs"

[dependencies]
parabellum_app = { path = "../parabellum_app" }
parabellum_game = { path = "../parabellum_game" }
parabellum_types = { path = "../parabellum_types" }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
# HTTP stuff
axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { version = "0.6", features = ["fs", "trace"] }

# Templates
askama = { version = "0.14", features = ["blocks", "full", "serde_json"] }
rust-i18n = { version = "3.1.5" }

[dev-dependencies]
# Enable "test-utils" for parabellum_app
parabellum_app = { path = "../parabellum_app", features = ["test-utils"] }
