[package]
name = "parabellum_web"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }

[lib]
path = "lib.rs"

[lints.clippy]
manual_async_fn = "allow"
result_large_err = "allow"

[dependencies]
parabellum_app = { path = "../parabellum_app" }
parabellum_game = { path = "../parabellum_game" }
parabellum_types = { path = "../parabellum_types" }

tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
# HTTP stuff
axum = { workspace = true }
tower-http = { version = "0.6", features = ["fs", "trace"] }

rust-i18n = { version = "3.1.5" }

[dev-dependencies]
# Enable "test-utils" for parabellum_app
parabellum_game = { path = "../parabellum_game", features = ["test-utils"] }
parabellum_app = { path = "../parabellum_app", features = ["test-utils"] }
